<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FlyMe</string>
    <string name="try_again">Δοκιμάστε ξανά</string>
    <string name="action_settings">Ρυθμίσεις</string>
    <string name="action_search">Αναζήτηση Πτήσεων</string>
    <string name="title_activity_search">Αναζήτηση Πτήσεων</string>
    <string name="title_activity_settings">Ρυθμίσεις</string>
    <string name="action_share">Κοινοποίηση</string>

    <!-- Main Activity Strings -->
    <string name="no_flights_searched">Δεν έχετε πραγματοποιήσει κάποια αναζήτηση πτήσης ακόμα.</string>
    <string name="start_searching">Ξεκινήστε να ψάχνετε πατώντας το παραπάνω κουμπί αναζήτησης</string>
    <string name="see_your_flights">Παρακάτω μπορείτε να δείτε τις πιο πρόσφατες αναζητήσεις σας!</string>
    <string name="from">Από:&#160;</string>
    <string name="to">Προς:&#160;</string>
    <string name="transition">Μετάβαση:&#160;</string>
    <string name="return_from">Επιστροφή:&#160;</string>
    <string name="return_not_declared">Επιστροφή: Δεν έχει οριστεί</string>
    <string name="adults_number">Αριθμός Ενηλίκων:&#160;</string>
    <string name="children_number">Αριθμός Παιδιών:&#160;</string>
    <string name="infants_number">Αριθμός Βρεφών:&#160;</string>
    <string name="non_direct_flights">Απευθείας πτήσεις: Όχι</string>
    <string name="direct_flights">Απευθείας πτήσης: Ναι</string>

    <!-- Ημερομηνία Αναχώρησης, Άφιξης και Επιστροφής-->
    <string name="departure_date">Ημερομηνία Αναχώρησης</string>
    <string name="arrival_date">Ημερομηνία Άφιξης</string>
    <string name="return_date">Ημερομηνία Επιστροφής</string>


    <string name="yes">Ναι</string>
    <string name="no">Όχι</string>

    <string name="itinerary_depart">Δρομολόγιο Αναχώρησης</string>
    <string name="itinerary_return">Δρομολόγιο Επιστροφής</string>
    <string name="stop">Στάση</string>

    <!-- Όνομα της λίστας στο μενου -->
    <string name="currency_label">Νόμισμα</string>
    <!-- Επικεφαλιδα για τα ευρω -->
    <string name="currency_label_euro">EUR</string>
    <!-- Επικεφαλιδα για τα δολαρια -->
    <string name="currency_label_dollars">USD</string>
    <!-- Κλειδί του νομίσματος για τα SharedPreferences -->
    <string name="currency_key" translatable="false">currency</string>
    <!-- Τιμή στα SharedPreferences για τα ευρώ -->
    <string name="currency_eur" translatable="false">EUR</string>
    <!--  Τιμή στα SharedPreferences για τα δολάρια -->
    <string name="currency_usd" translatable="false">USD</string>

    <!-- Αεροδρόμιο Αναχώρησης και Προορισμού -->
    <string name="origin">Αεροδρόμιο Αναχώρησης</string>
    <string name="destination">Αεροδρόμιο Προορισμού</string>

    <!-- Περιγραφή αεροδρόμιο αναχώρησης και προορισμού -->
    <string name="origin_hint">Επιλέξτε Αεροδρόμιο Αναχώρησης</string>
    <string name="destination_hint">Επιλέξτε Αεροδρόμιο Προορισμού</string>

    <string name="with_return">Με Επιστροφή</string>

    <string name="plus_symbol">+</string>
    <string name="minus_symbol">-</string>

    <string name="adults_text">Ενήλικες</string>
    <string name="children_text">Παιδιά (2-11 ετών)</string>
    <string name="infants_text">Βρέφη (εώς 2 ετών)</string>

    <string name="flyers_higher_than_max_message">Οι επιβάτες μπορούν να είναι μέχρι 9. Eπιλέξτε μικρότερο αριθμό.</string>
    <string name="infants_higher_than_max_message">Πρέπει να υπάρχει τουλάχιστον ένας ενήλικας για κάθε βρέφος.</string>
    <string name="flyers_zero_num_message">Πρέπει να υπάρχει τουλάχιστον ένας επιβάτης.</string>

    <string name="non_stop">Μόνο Απευθείας Πτήσεις</string>
    <string name="title_activity_results">Αποτελέσματα Αναζήτησης</string>

    <string name="origin_is_missing_message">Δεν επιλέξατε αεροδρόμιο αναχώρησης.</string>
    <string name="destination_is_missing_message">Δεν επιλέξατε αεροδρόμιο προορισμού.</string>

    <string name="destin_date_after_origin_message">Η ημερομηνία προορισμού δεν μπορεί να είναι πριν από την ημερομηνία αναχώρησης.</string>

    <!-- Καινούρια strings-->
    <string name="loading_message">Φορτώνουν τα δεδομένα. Παρακαλώ περιμένετε&#8230;</string>

    <!-- Συντομογραφίες αναχώρησης και επιστροφής-->
    <string name="hours_first_letter">ω</string>
    <string name="minutes_first_letter">λ</string>

    <string name="stops">Στάσεις</string>
    <string name="return_stops">Στάσεις Επ</string>

    <!-- Strings στην ResultsActivity -->
    <string name="result_search">Αναζητήσατε για:</string>
    <string name="result_direct_fligths">Μόνο απευθείας πτήσεις</string>
    <string name="result_dialog_title">Δεν βρέθηκε δίκτυο</string>
    <string name="result_dialog_message">Δεν βρέθηκε κάποιο διαθέσιμο δίκτυο. Συνδεθείτε και δοκιμάστε ξανά</string>
    <string name="result_dialog_try_again">Δοκιμάστε ξανά</string>
    <string name="result_adults">Ενήλικες:&#160;</string>
    <string name="result_children">Παιδιά:&#160;</string>
    <string name="result_infants">Βρέφη:&#160;</string>
    <string name="result_transition">Μετάβαση:&#160;&#160;</string>
    <string name="result_return">Επιστροφή:&#160;</string>
    <string name="result_no_flights_found">Δεν βρέθηκαν διαθέσιμες πτήσεις για την αναζήτηση σας!</string>
    <string name="result_internet_not_found_title">Δεν βρέθηκε δίκτυο</string>
    <string name="result_internet_not_found_message">Δεν βρέθηκε κάποιο διαθέσιμο δίκτυο. Συνδεθείτε και δοκιμάστε ξανά</string>
    <string name="result_internet_not_found_button">Δοκιμάστε ξανά</string>

    <!-- Strings στην DetailsActivity-->
    <string name="title_activity_details">Λεπτομέρειες Πτήσης</string>
    <string name="departure_title">Μετάβαση</string>
    <string name="return_title">Επιστροφή</string>
    <string name="total_duration">Συνολική Διάρκεια:&#160;</string>
    <string name="duration">Διάρκεια:&#160;</string>
    <string name="flight_no">Πτήση Νο</string>

    <string name="adults_price">Τιμή Ενηλίκων: </string>
    <string name="children_price">Τιμή Παιδιών: </string>
    <string name="infants_price">Τιμή Βρεφών: </string>
    <string name="total_price">Συνολικό Ποσό: </string>

</resources>
